manifests/deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-container-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multi-container-app
  template:
    metadata:
      labels:
        app: multi-container-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - name: nginx-http
              containerPort: 80
        - name: multitool
          image: wbitt/network-multitool:latest
          ports:
            - name: multitool-http
              containerPort: 8080
