manifests/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-container-clusterip
spec:
  type: ClusterIP
  selector:
    app: multi-container-app
  ports:
    - name: nginx
      port: 9001
      targetPort: nginx-http
      protocol: TCP
    - name: multitool
      port: 9002
      targetPort: multitool-http
      protocol: TCP
